# comparisonator

./: .gitignore  README.md  pyproject.toml
src/: config.py  error.py  main.py  utils.py
src/entity/: comparison.py  item.py  pending_comparison.py  session.py
src/repository/: comparison_engine.py  session.py
src/repository/comparison/: assuming_comparison.py  comparison.py  full_comparison.py
